syntax = "proto3";

import "HoroscopResponse.proto";
import "AutumnRequest.proto";

option csharp_namespace = "Generated";

service AutumnService {
	rpc getZodiacSign(AutumnRequest) returns (HoroscopResponse);
}