syntax = "proto3";

import "HoroscopResponse.proto";
import "HoroscopRequest.proto";

option csharp_namespace = "Generated";

service WinterService {
	rpc  ShowWinterSeason(HoroscopRequest) returns (HoroscopResponse);
}